# Ignis

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: AntiAliasingFilter.cpp  AntiAliasingFilter.h  SoftClipperCore.cpp  SoftClipperCore.h
Source/UI/: ClippingIndicator.cpp  ClippingIndicator.h  IgnisLookAndFeel.cpp  IgnisLookAndFeel.h  StereoMeter.cpp  StereoMeter.h
Source/Utils/: Parameters.cpp  Parameters.h  PresetManager.cpp  PresetManager.h
